[package]
name = "message-board"
version = "0.1.0"
authors = ["DanSnow <dododavid006@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3.3", features = ["sqlite"] }
dotenv = "0.13.0"
serde = "1.0.80"
serde_derive = "1.0.80"
futures = "0.1.25"
tokio = "0.1.11"
tower-web = "0.3.2"
serde_json = "1.0.32"
